--- a/app/src/main/res/layout/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout/activity_choose_login_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.photop.ChooseLoginRegistrationActivity"
+    tools:context="com.pp.photop.ChooseLoginRegistrationActivity"
     android:orientation="vertical">
     <Button
         android:layout_width="match_parent"
