--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,7 +10,8 @@
     android:paddingTop="20sp"
     android:paddingBottom="20sp"
     android:outlineProvider="bounds"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:id="@+id/linearLauoutcardView">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -22,7 +23,7 @@
         <LinearLayout
             android:layout_gravity="center"
             android:layout_width="300dp"
-            android:layout_height="350dp"
+            android:layout_height="400dp"
             android:orientation="vertical">
 
             <ImageView
@@ -41,7 +42,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 
