--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Matches"
+            android:text="Saves"
             android:onClick="goToMatches"
             tools:ignore="MissingConstraints" />
         <Button
