--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -26,6 +26,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Uploader's name"
+            android:layout_gravity="center"
+            android:id="@+id/MatchUploadUserName"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Uploader's phone"
+            android:layout_gravity="center"
+            android:id="@+id/MatchPhone"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Match's ID"
             android:layout_gravity="center"
             android:id="@+id/MatchId"/>
