--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,67 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
     android:orientation="vertical"
-    android:padding="20sp">
+    android:padding="@dimen/margin_medium">
     
     <ImageView
-        android:layout_width="100sp"
-        android:layout_height="100sp"
+        android:layout_width="@dimen/image_width_medium"
+        android:layout_height="@dimen/image_height_medium"
         android:id="@+id/profileImage"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginBottom="20sp">
+        android:layout_marginBottom="@dimen/margin_medium">
     </ImageView>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name"
         android:background="@null"
-        android:hint="Name"
-        android:layout_marginBottom="20sp"/>
+        android:hint="@string/name"
+        android:layout_marginBottom="@dimen/margin_medium"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/phone"
         android:background="@null"
-        android:hint="Phone"
-        android:layout_marginBottom="20sp"
+        android:hint="@string/phone"
+        android:layout_marginBottom="@dimen/margin_medium"
         android:inputType="phone"/>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20sp">
+        android:layout_marginBottom="@dimen/margin_medium">
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/pizza"
             android:onClick="onCheckboxClicked"
-            android:text="Pizza" />
+            android:text="@string/pizza" />
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/chinese"
             android:onClick="onCheckboxClicked"
-            android:text="Chinese" />
+            android:text="@string/chinese" />
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/glutenfree"
             android:onClick="onCheckboxClicked"
-            android:text="Gluten Free" />
+            android:text="@string/gluten_free" />
 
         <CheckBox
             android:id="@+id/vegan"
             android:layout_width="108dp"
             android:layout_height="wrap_content"
             android:onClick="onCheckboxClicked"
-            android:text="Vegan" />
+            android:text="@string/vegan" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20sp"
+        android:layout_marginBottom="@dimen/margin_medium"
         android:orientation="horizontal">
 
         <CheckBox
@@ -74,54 +74,54 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onCheckboxClicked"
-            android:text="Italian" />
+            android:text="@string/italian" />
 
         <CheckBox
             android:id="@+id/dessert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onCheckboxClicked"
-            android:text="Dessert" />
+            android:text="@string/dessert" />
         <CheckBox
             android:id="@+id/mexican"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onCheckboxClicked"
-            android:text="Mexican" />
+            android:text="@string/mexican" />
 
         <CheckBox
             android:id="@+id/brunch"
             android:layout_width="127dp"
             android:layout_height="wrap_content"
             android:onClick="onCheckboxClicked"
-            android:text="Brunch" />
+            android:text="@string/brunch" />
 
 
 
     </LinearLayout>
-<SeekBar
-    android:id="@+id/seekbar"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:layout_marginTop="26dp"
-    android:layout_gravity="center"
-    android:layout_marginBottom="30dp"
-    android:max="100"
-    android:progress="1"
-    android:progressDrawable="@drawable/custom_progess"
-    >
 
-</SeekBar>
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/margin_mediumlarge"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/margin_large"
+        android:max="100"
+        android:progress="1"
+        android:progressDrawable="@drawable/custom_progess">
+    </SeekBar>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/confirm"
-        android:text="confirm"/>
+        android:text="@string/confirm"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/back"
-        android:text="back"/>
+        android:text="@string/back"/>
 </LinearLayout>
