--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,10 +5,10 @@
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingLeft="40sp"
-    android:paddingRight="40sp"
-    android:paddingTop="20sp"
-    android:paddingBottom="20sp"
+    android:paddingLeft="@dimen/margin_xlarge"
+    android:paddingRight="@dimen/margin_xlarge"
+    android:paddingTop="@dimen/margin_medium"
+    android:paddingBottom="@dimen/margin_medium"
     android:outlineProvider="bounds"
     android:clipToPadding="false"
     android:id="@+id/linearLauoutcardView">
@@ -17,8 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:cardCornerRadius="4dp"
-        android:elevation="2dp"
+        app:cardCornerRadius="@dimen/card_radius"
+        android:elevation="@dimen/card_elevation"
         android:id="@+id/cardView">
         <LinearLayout
             android:layout_gravity="center"
@@ -28,14 +28,14 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="@dimen/image_height_xlarge"
                 android:id="@+id/image"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
+
             <TextView
                 android:id="@+id/name"
-                android:textSize="30sp"
-                android:paddingLeft="20sp"
+                android:textSize="@dimen/text_large"
+                android:paddingLeft="@dimen/margin_medium"
                 android:textColor="@android:color/black"
                 android:gravity="center|left"
                 tools:text="hello"
@@ -46,6 +46,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
